--- a/serverless.yml
+++ b/serverless.yml
@@ -92,6 +92,7 @@ resources:
       Type: AWS::CloudFront::Distribution
       Properties:
         DistributionConfig:
+          PriceClass: PriceClass_100
           Enabled: true
           HttpVersion: http2
           Origins:
